2001-03-21  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmIdent/FvwmIdent.c (list_end):
	Fixed crash when reselecting the FvwmIdent window (mouse button 2)

	* FvwmButtons/draw.c (RedrawButton):
	* FvwmButtons/FvwmButtons.c (HandlePanelPress):
	(Loop):
	panel indicators are more responsive to button presses

2001-03-20  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmButtons/misc.c (ConstrainSize):
	removed debug code

	* FvwmButtons/FvwmButtons.c (process_message):
	don't redraw at the end of the window list or when switching pages

2001-03-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmButtons/draw.c (MakeButton):
	* FvwmButtons/FvwmButtons.c (swallow):
	removed debug code and added another XSync; try to fix race condition
	this way.

2001-03-19  Dan Espen  <dane@mk.telcordia.com>

	* FvwmAnimate/FvwmAnimate.c: Fix deadlock with patch from Tim.

2001-03-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmTheme/FvwmTheme.1:
	* FvwmScript/Scripts/system.fvwmrc:
	* FvwmSaveDesk/example/fvwm2rc:
	converted to new config file format

	* FvwmButtons/misc.c (ConstrainSize):
	allow bigger max size of swallowed windows
	(ConstrainSize):
	added debug code

	* FvwmButtons/FvwmButtons.c (swallow):
	* FvwmButtons/draw.c (MakeButton):
	added some debug code to find out how swallowed windows can be bigger
	than their button

	* FvwmButtons/FvwmButtons.c (swallow):
	tried to avoid race conditions between wm and module when swallowing
	windows

	* FvwmButtons/button.c (GetInternalSize):
	fixed a bug zero width/height buttons

	* FvwmButtons/draw.c (MakeButton):
	small safety patch

2001-03-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmButtons/parse.c (ParseButton):
	ignore button icon for swallow buttons to fix a sizing problem.

	* FvwmPager/FvwmPager.c (main):
	transient pager exits it it can not grab the pointer

	* FvwmForm/Makefile.am (FvwmTalk):
	* FvwmEvent/Makefile.am (install-exec-local):
	* FvwmRearrange/Makefile.am (FvwmTile):
	(FvwmCascade):