@@ -1,3 +1,10 @@
+2001-03-22  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmButtons/draw.c (RedrawButton):
+	* FvwmButtons/FvwmButtons.c:
+	(Loop):
+	improved mouse button handling and fixed several small problems
+
 2001-03-21  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmIdent/FvwmIdent.c (list_end):
